--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
 	},
 	"devDependencies": {
 		"@iconify/vue2": "^2.1.0",
+		"@tailwindcss/typography": "^0.5.9",
 		"@vitejs/plugin-legacy": "^2.0.0",
 		"@vitejs/plugin-vue2": "^1.1.2",
 		"autoprefixer": "^10.4.14",
 		"postcss": "^8.4.21",
 		"tailwindcss": "^3.2.7",
 		"terser": "^5.14.2",
-		"vite": "^3.0.2"
+		"vite": "^3.0.2",
+		"vite-plugin-vue-markdown": "^0.22.4"
 	}
 }
